# RL-xiangqi

./: LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: perft-depth3-bug.md
.planning/milestones/: v0.1-MILESTONE-AUDIT.md  v0.1-REQUIREMENTS.md  v0.1-ROADMAP.md  v0.2-MILESTONE-AUDIT.md  v0.2-REQUIREMENTS.md  v0.2-ROADMAP.md  v0.3-MILESTONE-AUDIT.md  v0.3-REQUIREMENTS.md  v0.3-ROADMAP.md
.planning/phases/01-data-structures/: 01-01-SUMMARY.md  01-02-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md
.planning/phases/02-move-generation/: 02-01-PLAN.md  02-01-SUMmary.md  02-CONTEXT.md  (+2 more)
.planning/reports/: MILESTONE_SUMMARY-v0.2.md
.planning/research/: ARCHITECTURE.md  DATA_STRUCTURES.md  FEATURES.md  LIBRARIES.md  PITFALLS.md  RL_ENV.md  RULES.md  STACK.md  SUMMARY.md
paper_collect/: dblp_config.json  dblp_keywords_extract.py  dblp_papers.csv  dblp_papers_matched_1151535e.xlsx  dblp_papers_matched_2d666a79.xlsx  dblp_search.py
papers/: Wu 等 - 2025 - Think How Your Teammates Think Active Inference Can Benefit Decentralized Execution.md
src/xiangqi/: __init__.py
tests/: conftest.py  test_api.py  test_constants.py  test_endgame.py  test_legal.py  test_moves.py  test_perft.py  test_perft_engine.py  test_pyffish.py  test_repetition.py  test_rl.py  test_rules.py  test_selfplay.py  test_state.py  test_types.py
tests/ai/: __init__.py  test_base.py  test_random_ai.py  test_snapshot.py
tests/controller/: __init__.py  conftest.py  test_ai_worker.py  test_game_controller.py
tests/ui/: __init__.py  conftest.py  test_board.py  test_board_interaction.py  test_board_interaction_task1.py  test_board_interaction_task2.py  test_board_interaction_task3.py  test_constants.py  test_piece_item.py
(+191 files in other folders)
