[project]
name = "xiangqi"
version = "0.1.0"
description = "Xiangqi (Chinese Chess) rule engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
