[project]
name = "xiangqi"
version = "0.1.0"
description = "Xiangqi (Chinese Chess) rule engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0,<3.0",
    "gymnasium>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# 交叉验证依赖：需要先安装 stockfish 系统库（brew install stockfish / apt install stockfish）
# 再 pip install pyffish
pyffish = ["pyffish"]

[project.entry-points."gymnasium.envs"]
Xiangqi = "xiangqi.rl.env:XiangqiEnv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xiangqi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
